test/bad/classes/method05.px

class Test def
    func f(x: Int): Void def
        skip

test = Test()
test.f = test.f
